--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mnma Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,4 +20,30 @@
     "url": "https://gitlab.com/mnma/mnma-server/issues"
   },
   "homepage": "https://gitlab.com/mnma/mnma-server#README"
+  "babel": {
+    "plugins": [
+      "syntax-object-rest-spread",
+      "transform-async-to-generator",
+      "transform-es2015-destructuring",
+      "transform-es2015-modules-commonjs",
+      "transform-export-extensions",
+      "transform-object-rest-spread"
+    ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-watch": "^3.1.2"
+  }
 }
