--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "env": { "node": true, "Parse": true },
+  "env": { "node": true },
   "extends": "airbnb/base",
   "parser": "babel-eslint",
 	"rules": {
