--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ logs
 node_modules
 pids
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
