--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
     "nodemon": "^1.11.0",
     "parse": "^1.10.0",
     "parse-dashboard": "^1.0.28",
-    "parse-server": "^2.5.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "parse-server": "^2.5.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
